# customer_support_agent_openai_agents_sdk

./: README.md  instructions.py  main.py  pyproject.toml
QAsystem/: data_ingetion.py  retrievelgeneration.py  utils.py
agents_tools/: availableRooms.py  booking_agent.py
data/: FAQs.txt  services.txt
src/customer_support/: FAQs.py  available_rooms.py  booking.py  cancel_booking.py  update_rooms.py
